<resources>
    <string name="app_name">Sportsm8</string>
    <string name="my_app">This is my app!</string>
    <string name="date"></string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_sportart">Sportart</string>
    <string-array name="names">
        <item>Beachen</item>
        <item>Fußball</item>
        <item>Laufen</item>

    </string-array>

    <string-array name="sportarten">
        <item>Beachen</item>
        <item>Fußball</item>
        <item>Laufen</item>
        <item>Programmieren</item>
        <item>Basketball</item>
        <item>Tricking</item>
        <item>FitnessStudio</item>

    </string-array>

    <string-array name="testsportID">
        <item>Beachen</item>
        <item>Fußball</item>
        <item>Programmieren</item>
        <item>Laufen</item>
        <item>Tricking</item>


    </string-array>

    <string-array name="emails">
        <item>alexa.reish@gmail.com</item>
        <item>alexander.reisach@gmail.com</item>
        <item>Hendrik@gmail.com</item>
        <item>jonathanhaas@arcor.de</item>
        <item>Korbi@korbi.de</item>
        <item>Lorenz@kommtehnicht.de</item>
        <item>Nils@der.de</item>
        <item>Vicent@Vaas.de</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sportart2">Sportart2</string>
    <string name="title_activity_einladungen">Einladungen</string>
    <string name="button_title_funGame">Freundschaftsspiel</string>
    <string name="button_title_trainingsPartner">Trainingspartner suchen</string>
    <string name="button_title_ligaGame">Ligaspiel</string>
    <string name="text_worldwide">Weltweit: </string>
    <string name="text_rank">Rang: </string>
    <string name="text_distance">Gelaufen:</string>
    <string name="text_distance_whole">Gelaufen gesamt:</string>
    <string name="text_beginning">Beginn</string>
    <string name="text_end">Ende</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_date">Datum</string>
    <string name="button_sport">Sportart</string>
    <string name="button_invites">Einladungen</string>
    <string name="button_calendar">Kalender</string>
    <string name="button_msgbutton">Nachricht</string>
    <string name="title_activity_navigationdrawer">Navigationdrawer</string>

    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>

    <string name="button_showWeekActivity">Show week!</string>
    <string name="button_monday">Mo</string>
    <string name="button_tuesday">Tu</string>
    <string name="button_wednesday">We</string>
    <string name="button_thursday">Th</string>
    <string name="button_friday">Fr</string>
    <string name="button_saturday">Sa</string>
    <string name="button_sunday">Su</string>
    <string name="title_activity_account_page">AccountPage</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_friends">Friends</string>
    <string name="kalendar_activity">Kalender</string>

    <string name="button_friends">Freunde</string>
    <string name="add_friends">Add Friends</string>
    <string name="setTimeWrong">Zeit falsch eingestellt</string>
    <string name="text_empty_fields">Nicht alle Felder ausgefüllt</string>
    <string name="private_group">Private Gruppe</string>
    <string name="invitation_mode">Einladungen privat</string>
    <string name="new_group_name">Gruppenname</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="next_meeting">Nächstes Meeting:</string>
    <string name="title_activity_search_new_friends">SearchNewFriends</string>
    <string name="title_activity_meeting_detail_view">MeetingDetailView</string>
    <string name="text_selected">"%d ausgewählt"</string>
    <string name="friendRequest">Freundschaftsanfrage</string>
    <string name="create_meeting">Create Meeting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="leave_group">Gruppe verlassen</string>
    <string name="title_activity_create_new_meeting2">CreateNewMeeting2</string>
    <string name="save">speichern</string>
    <string name="add_friends_to_meeting">Freunde hinzufügen</string>
    <string name="minium_party_size">Mindestanzahl Teilnemer:</string>
    <string name="minimum_meeting_time">Mindestzeit:</string>
    <string name="calendar">Kalendar</string>
    <string name="friends">Freunde</string>
    <string name="home">Home</string>
    <string name="groups">Gruppen</string>
    <string name="meetings">Meetings</string>
    <string name="title_activity_debug_screen">DebugScreen</string>
    <string name="start_sport_activity">Start Sport Meeting</string>
    <string name="Sport_Meeting">Sport machen</string>
    <string name="more_settings_button">More Settings</string>
    <string name="ortswahl">location_selection</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
</resources>
