<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="My Acconut" />
<item
    android:id="@+id/nav_home"
    android:icon="@mipmap/ic_launcher"
    android:title="Home"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="Settings" />


    <item
        android:id="@+id/nav_sportart"
        android:icon="@drawable/ic_directions_run_black_24dp"
        android:title="@string/title_activity_sportart" />
    <item
        android:id="@+id/nav_msg"
        android:icon="@drawable/ic_mail_black_24dp"
        android:title="@string/button_msgbutton" />
    <item
        android:id="@+id/nav_invite"
        android:icon="@drawable/ic_insert_invitation_black_24dp"
        android:title="@string/button_invites" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="Logout" />

</menu>