<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_sportart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editText_new_group_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/transparent"
        android:cursorVisible="false"
        android:hint="@string/new_group_name"
        android:maxLines="1"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/private_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"
                android:text="@string/invitation_mode" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/private_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"
                android:layout_marginStart="16dp" />

            <Switch
                android:id="@+id/invitation_mode_switch"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp" />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:layout_gravity="center"
        android:id="@+id/button_create_group_team"
        android:onClick="onClick"/>

</LinearLayout>