<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sportart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alex.helloworld.Sport"
    tools:showIn="@layout/activity_sportart">


    <ImageView
        android:id="@+id/imageView_sportart"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/beachen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView_sportart"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/button_funGame"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="funGame"
            android:text="@string/button_title_funGame" />

        <Button
            android:id="@+id/button_training"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="training"
            android:text="@string/button_title_trainingsPartner"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_lSpiel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="ligaGame"
            android:text="@string/button_title_ligaGame" />

        <Button
            android:id="@+id/nochEinButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="Noch ein Button" />

    </LinearLayout>
</RelativeLayout>
