<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

        <EditText
            android:id="@+id/eEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_person_black_36dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <EditText
            android:id="@+id/ePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_lock_black_36dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="@+id/eEmail"
            app:layout_constraintTop_toBottomOf="@+id/eEmail" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:onClick="buttonClick"
            android:text="@string/login"
            app:layout_constraintRight_toRightOf="@+id/ePassword"
            app:layout_constraintTop_toBottomOf="@+id/ePassword" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:onClick="buttonClick"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="@+id/loginButton"
            app:layout_constraintLeft_toLeftOf="@+id/ePassword"
            app:layout_constraintTop_toBottomOf="@+id/ePassword" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/eEmail"
            app:layout_constraintRight_toRightOf="@+id/eEmail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>